--- a/components/base/Timeline/Timeline.module.css
+++ b/components/base/Timeline/Timeline.module.css
@@ -1,5 +1,6 @@
 .timeline-container {
-  @apply flex flex-col mx-auto p-2 text-[#252934];
+  color: #252934;
+  @apply flex flex-col mx-auto p-2;
 }
 
 /* Left Timeline */
@@ -9,7 +10,8 @@
 }
 
 .timeline-left-layout {
-  @apply bg-gray-100 col-start-1 col-end-5 p-4 rounded-xl my-4 ml-auto shadow-lg relative;
+  background: #f3f4f6;
+  @apply col-start-1 col-end-5 p-4 rounded-xl my-4 ml-auto shadow-lg relative;
 }
 
 .timeline-left-ruler-layout {
@@ -21,11 +23,13 @@
 }
 
 .timeline-left-ruler {
-  @apply h-full w-1 bg-[#252934] pointer-events-none;
+  background: #252934;
+  @apply h-full w-1 pointer-events-none;
 }
 
 .timeline-left-ruler-bullet {
-  @apply w-6 h-6 absolute top-1/2 -mt-3 rounded-full bg-gray-300 shadow;
+  background: #d1d5db;
+  @apply w-6 h-6 absolute top-1/2 -mt-3 rounded-full shadow;
 }
 
 /* Right Timeline */
@@ -35,7 +39,8 @@
 }
 
 .timeline-right-layout {
-  @apply bg-gray-100 col-start-6 col-end-10 p-4 rounded-xl my-4 mr-auto shadow-lg relative;
+  background: #f3f4f6;
+  @apply col-start-6 col-end-10 p-4 rounded-xl my-4 mr-auto shadow-lg relative;
 }
 
 .timeline-right-ruler-layout {
@@ -47,11 +52,13 @@
 }
 
 .timeline-right-ruler {
-  @apply h-full w-1 bg-[#252934] pointer-events-none;
+  background: #252934;
+  @apply h-full w-1 pointer-events-none;
 }
 
 .timeline-right-ruler-bullet {
-  @apply w-6 h-6 absolute top-1/2 -mt-3 rounded-full bg-gray-300 shadow;
+  background: #d1d5db;
+  @apply w-6 h-6 absolute top-1/2 -mt-3 rounded-full shadow;
 }
 
 .timeline-content-header {
@@ -67,7 +74,9 @@
 }
 
 .timeline-content-type {
-  @apply bg-[#252934] text-white pl-1 pr-2 capitalize absolute right-0 bottom-0 rounded-br-lg text-sm;
+  background: #252934;
+  color: white;
+  @apply pl-1 pr-2 capitalize absolute right-0 bottom-0 rounded-br-lg text-sm;
 }
 
 @screen md {
