--- a/components/base/CardSkill/CardSkill.module.css
+++ b/components/base/CardSkill/CardSkill.module.css
@@ -1,5 +1,10 @@
 .card-skill-container {
-  @apply p-3 my-6 bg-white shadow-lg break-all rounded-md flex flex-col items-center text-[#252934] transition-all duration-300;
+  background-color: white;
+  color: #252934;
+  box-shadow: 6px 6px 5px 0px rgba(168, 168, 168, 0.295);
+  -webkit-box-shadow: 6px 6px 5px 0px rgba(168, 168, 168, 0.295);
+  -moz-box-shadow: 6px 6px 5px 0px rgba(168, 168, 168, 0.295);
+  @apply p-3 my-6 break-all rounded-md flex flex-col items-center transition-all duration-300;
 }
 
 .card-skill-container:hover {
