--- a/components/base/ListIconContact/ListIconContact.module.css
+++ b/components/base/ListIconContact/ListIconContact.module.css
@@ -7,11 +7,12 @@
 }
 
 .list-icon-contact:hover {
-  @apply -mt-3 mb-3 bg-white rounded-md;
+  background: white;
+  @apply -mt-3 mb-3 rounded-md;
 }
 
 .list-icon-contact:hover > .list-icon-contact-icon {
-  @apply text-[#252934];
+  color: #252934;
 }
 
 .list-icon-contact-icon {
@@ -21,5 +22,11 @@
 @screen md {
   .list-icon-contact {
     @apply w-[8%];
+  }
+}
+
+@screen lg {
+  .list-icon-contact {
+    @apply w-[4.6%];
   }
 }
