--- a/components/module/About/About.module.css
+++ b/components/module/About/About.module.css
@@ -1,34 +1,36 @@
 .about-grid-layout {
-  @apply grid grid-cols-1 my-20;
+  @apply flex flex-col items-center my-20;
 }
 
 .about-left-content {
-  @apply col-span-1 place-self-center mb-5;
+  @apply w-full flex justify-center;
 }
 
 .about-right-content {
-  @apply col-span-1;
+  @apply w-full;
 }
 
 .about-header {
-  @apply text-[32px] font-bold text-[#252934];
+  color: #252934;
+  @apply text-[32px] font-bold;
 }
 
 .about-content {
-  @apply text-[#252934] text-justify mt-3;
+  color: #252934;
+  @apply text-justify mt-3;
 }
 
 @screen md {
   .about-grid-layout {
-    @apply grid grid-cols-12 gap-6;
+    @apply flex flex-row w-full gap-6 items-start;
   }
 
   .about-left-content {
-    @apply col-span-5 -mt-8;
+    @apply w-5/12 -mt-8;
   }
 
   .about-right-content {
-    @apply col-span-7;
+    @apply w-7/12;
   }
 
   .about-header {
