--- a/components/module/Header/Header.module.css
+++ b/components/module/Header/Header.module.css
@@ -1,7 +1,11 @@
 .header-container {
   /* @apply relative flex justify-center items-center min-h-screen w-full bg-[#252934] pt-[86px] pb-12; */
+  @apply relative min-h-screen w-full pt-[70px] pb-12 bg-no-repeat;
   background: url('/assets/bg/1.jpg');
-  @apply relative min-h-screen w-full pt-[70px] pb-12 bg-cover bg-center bg-no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   /* background: radial-gradient(circle at 12.3% 19.3%, rgb(85, 88, 218) 0%, rgb(95, 209, 249) 100.2%); */
   /* background: linear-gradient(to top, #00c6fb 0%, #005bea 100%); */
   /* background: linear-gradient(89deg, rgb(21, 74, 189) 0.1%, rgb(26, 138, 211) 51.5%, rgb(72, 177, 234) 100.2%); */
