--- a/views/HomeView/Home.module.css
+++ b/views/HomeView/Home.module.css
@@ -1,19 +1,23 @@
 .about-me-container {
-  @apply container pt-4;
+  @apply container pt-20;
 }
 
 .skills-bg,
 .project-bg {
+  @apply relative;
   background-color: #f3f4f6;
 }
 
-.skills-container,
+.skills-container {
+  @apply container pt-24 pb-16;
+}
+
 .contact-container {
   @apply container pt-20 pb-32;
 }
 
 .project-container {
-  @apply container pt-20 pb-56;
+  @apply container pb-56;
 }
 
 .project-bg {
@@ -33,12 +37,12 @@
 }
 
 .education-experience {
-  @apply py-20 relative bg-no-repeat;
-  background: url('/assets/bg/1.jpg');
+  @apply py-32 relative bg-no-repeat;
+  /* background: url('/assets/bg/1.jpg');
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: cover; */
 }
 
 .education-experience-container {
